Prevent shrinking on smaller devices

--- a/src/client/style.css
+++ b/src/client/style.css
@@ -20,6 +20,10 @@
 
 @tailwind components;
 
+body {
+  @apply bg-primary;
+}
+
 .btn {
   @apply rounded-lg w-20 pt-1 pb-1 bg-secondary font-bold cursor-pointer text-yellow-900;
 }
